# Databricks-Notebook-Logger

./: LICENSE  README.md  pyproject.toml
demo/: demo_notebook.ipynb  demo_notebook_w_output.ipynb  error_notebook.ipynb
src/nb_audit_logger/: logger.py
src/notebook-logger/: logging.py  sftp.py
src/notebook_logger/: __init__.py  logging.py  sftp.py
