[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notebook-logger"
version = "0.1.0"
description = "Databricks logging framework for Python notebooks, including support for Spark SQL execution, with optional SFTP upload of log and HTML artifacts."
authors = [
    { name = "Hannah Cooper" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "requests",
    "paramiko"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]