[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nb-audit-logger"
version = "0.1.0"
description = "Databricks logging framework for Python notebooks, including support for Spark SQL execution, with optional SFTP upload of log and HTML artifacts."
authors = [
    { name = "Hannah Cooper", email = "hmcooper@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "requests",
    "paramiko"
]

keywords = ["databricks", "logging", "log", "notebook", "sftp", "audit-trail", "regulatory"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Source Code" = "https://github.com/hmcooper1/Databricks-Notebook-Logger"
"Demo Notebook" = "https://github.com/hmcooper1/Databricks-Notebook-Logger/blob/main/demo/demo_notebook.ipynb"
"Demo Log File" = "https://github.com/hmcooper1/Databricks-Notebook-Logger/blob/main/demo/demo_notebook.log"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]